# northstar-webxr

./: .gitignore  AGENTS.md  MACOS_FIXES.md  MACOS_SETUP_GUIDE.md  PROTOCOL.md  README.md
.cursor/plans/: northstar_r3f_rewrite_a00bf93f.plan.md
libxvisio/: CMakeLists.txt  README.md
libxvisio/example/: main.cpp
libxvisio/include/libxvisio/: xvisio.h
libxvisio/include/libxvisio/device/: device.h  slam.h
libxvisio/include/libxvisio/types/: pose.h
libxvisio/src/: slam.cpp  xvisio.cpp
libxvisio/src/device/: device.cpp
libxvisio/src/types/: pose.cpp
visual-test/: combined.html  combined.js  hands.html  hands.js  index.html  main.js  northstar.html  northstar.js  package.json  server.js  style.css  vite.config.ts
visual-test/.claude/: settings.local.json
visual-test/src/: App.tsx
visual-test/src/components/: DesktopPreview.tsx  HUD.tsx  Hands.tsx  NorthStarRenderer.tsx  Scene.tsx
visual-test/src/hooks/: useCalibration.ts  useUltraleap.ts  useXR50.ts
visual-test/src/lib/: calibration.ts  one-euro-filter.ts  transforms.ts
visual-test/src/shaders/: reprojection.glsl  undistortion.glsl
visual-test/src/stores/: tracking.ts
windows-test/: CMakeLists.txt  test_compare.cpp  test_hid_protocol.cpp  test_xslam_hid.cpp  test_xslam_sdk.cpp
xslam-headers/: xslam_drivers.h  xslam_hid.h  xslam_sdk.h  xslam_types.h
xvisio-rs/: Cargo.toml  SETUP.md  build.rs  cbindgen.toml  run-macos.sh
xvisio-rs/examples/: enumerate.rs  info.rs  macos_diag.rs  server.rs  stream.rs  stream_json.rs
xvisio-rs/include/: xvisio.h
xvisio-rs/src/: device.rs  error.rs  ffi.rs  hid.rs  lib.rs  protocol.rs  slam.rs  types.rs
